# littleplanets

./: .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  README_GENERATED.md  config_hatch.toml  inks.json  make_all.sh  mars.toml  process.py  pyproject.toml  run.py  svgtogcode.py
blender/: adjust_camera.py  adjust_paths.py  adjust_scene.py  camera_matrix.py  export_overlay_lines.py  export_ply.py  export_projection_matrix.py  import_ply.py  moon_Z.blend  raytracing.py  run_blender.sh  template.blend
config/: earth.toml  jupiter.toml  mars.toml  mars_poi.json  moon.toml  moon_poi.json  moon_poi2.json  venus.toml
config/mars_paths/: ArsiaMons.kmz  AscraeusMons.kmz  MarinersValley.kmz  OlympusMons.kmz  PavonisMons.kmz
experiments/: contours.py  palette.py
python/: blender_process.py  blender_raytracing.py  flowlines.py  flowlines3.py  hatch.py  main.ipynb  npy_to_tiff.py  process.py  process2.py  process_blender.py  pyproject.toml  resize_DEM.py  run.py  run_blender.sh
rust/: Cargo.toml
rust/src/: main.rs
src/: blender_wrapper.py  combine.py  configurator.py  contour_test.py  contours.py  crop_overlay.py  downloader.py  experiment_conductor.py  flowlines.py  flowlines3.py  generate_test_pattern.py  hatch.py  hershey.py  main.ipynb  main.rs  mesh.py  mesh2.py  modify_DEM.py  modify_tiff.py  overlay_axis.py  overlay_clouds.py  overlay_clouds2.py  overlay_coastlines.py  overlay_contours.py  overlay_crop.py  overlay_grid.py  overlay_pois.py  overlay_project.py  palette.py  process2.py  process_blender.py  project_overlay.py  raytracing.py  resize_DEM.py  ridges.py  sequencer.py  svgwriter.py
(+12 files in other folders)
