[project]
name = "littleplanets"
version = "0.1.0"
description = "Data to mesh to non-photorealistic rendering to line drawing pipeline of celestial bodies for pen plotters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastkml>=1.3.0",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "numpy-stl>=3.2.0",
    "opencv-python>=4.11.0.86",
    "openexr-numpy>=0.0.8",
    "pydantic>=2.11.7",
    "pyvista>=0.45.2",
    "rasterio>=1.4.3",
    "rtree>=1.4.0",
    "scikit-image>=0.25.2",
    "scipy-stubs>=1.16.1.1",
    "shapely>=2.1.1",
    "svgpathtools>=1.7.1",
    "tifffile>=2025.5.26",
    "toml>=0.10.2",
    "trimesh>=4.6.11",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint.pydocstyle]
convention = "google" 
