[project]
name = "littleplanets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy-stl>=3.2.0",
    "opencv-python>=4.11.0.86",
    "pyvista>=0.45.2",
    "rasterio>=1.4.3",
    "rtree>=1.4.0",
    "shapely>=2.1.0",
]

[tool.ruff]
line-length = 120
